--- a/src/modules/Catalog/styles/catalog-page.scoped.scss
+++ b/src/modules/Catalog/styles/catalog-page.scoped.scss
@@ -1,3 +1,12 @@
 .catalog-page {
-    background: #000000;
+    grid-column: main-start / main-end;
+    grid-row: main-start / main-end;
+    padding: 20px;
+
+
+    &__header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
